<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/padding_2x" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_top_home" android:padding="@dimen/padding_1x" android:layout_width="@dimen/x60" android:layout_height="@dimen/x60" android:layout_marginLeft="@dimen/padding_2x" android:layout_marginRight="@dimen/padding_2x" android:src="@drawable/home_selector" android:scaleType="fitXY" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_top_items" android:layout_width="wrap_content" android:layout_height="@dimen/y60" android:layout_toLeftOf="@id/iv_search" android:layout_toRightOf="@id/iv_top_home" android:layout_centerVertical="true">
        <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/layout_item_music_lib" android:layout_width="@dimen/x130" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_title" android:textColor="@drawable/text_color_main_title_selector" android:id="@id/tv_item_music_lib" android:paddingLeft="@dimen/padding_2x" android:paddingRight="@dimen/padding_2x" android:paddingBottom="@dimen/y4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="乐库" />
            <ImageView android:id="@id/iv_item_music_lib" android:background="@drawable/indicator_selector" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/y4" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/layout_item_radio" android:layout_width="@dimen/x130" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_title" android:textColor="@drawable/text_color_main_title_selector" android:id="@id/tv_item_radio" android:paddingLeft="@dimen/padding_2x" android:paddingRight="@dimen/padding_2x" android:paddingBottom="@dimen/y4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="电台" />
            <ImageView android:id="@id/iv_item_radio" android:background="@drawable/indicator_selector" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/y4" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/layout_item_audio_content" android:layout_width="@dimen/x130" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_title" android:textColor="@drawable/text_color_main_title_selector" android:id="@id/tv_item_audio_content" android:paddingLeft="@dimen/padding_2x" android:paddingRight="@dimen/padding_2x" android:paddingBottom="@dimen/y4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_item_name_audio_content" />
            <ImageView android:id="@id/iv_item_audio_content" android:background="@drawable/indicator_selector" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/y4" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/layout_item_local" android:layout_width="@dimen/x130" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_title" android:textColor="@drawable/text_color_main_title_selector" android:id="@id/tv_item_local" android:paddingLeft="@dimen/padding_2x" android:paddingRight="@dimen/padding_2x" android:paddingBottom="@dimen/y4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_item_name_local" />
            <ImageView android:id="@id/iv_item_local" android:background="@drawable/indicator_selector" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/y4" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/layout_item_mine" android:layout_width="@dimen/x130" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_title" android:textColor="@drawable/text_color_main_title_selector" android:id="@id/tv_item_mine" android:paddingLeft="@dimen/padding_2x" android:paddingRight="@dimen/padding_2x" android:paddingBottom="@dimen/y4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_item_name_mine" />
            <ImageView android:id="@id/iv_item_mine" android:background="@drawable/indicator_selector" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/y4" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/iv_search" android:layout_width="@dimen/x50" android:layout_height="@dimen/x50" android:src="@drawable/btn_search" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
</RelativeLayout>